修改了验证码无法显示
修改了验证码无法显示

--- a/Application/Club/View/Register/index.html
+++ b/Application/Club/View/Register/index.html
@@ -68,7 +68,7 @@
             <div class="verifyBox">
                 <input class="content_check1" type="text" name="verify"/>
                 <div class="verifyImg">
-                   <img src="http://127.0.0.1/club/index.php/Club/Register/verify" id="imghead">
+                   <img src="{:U('Register/verify')}" id="imghead">
                     <span onclick="changeVerify()">换一张</span>
                 </div>
              </div>
