--- a/Application/Admin/View/Login/index.html
+++ b/Application/Admin/View/Login/index.html
@@ -20,7 +20,7 @@
  			<input type="password" class="password" name="password" placeholder="请填写密码">
  			<input type="text" class="check" name="verify" placeholder="请填写验证码">
  			<a href="javascript:void(0)" class="reloadverify" onclick="changeVerify()">换一张?</a>
- 			<img src="http://127.0.0.1/club/index.php/Club/Register/verify" class="verify" onclick="changeVerify()">
+ 			<img src="{:U('Login/verify')}" class="verify" onclick="changeVerify()">
  			<div  class="submit">登录</div>
  	    </div>
  </div>
